# rust_webapp

./: Cargo.toml  NEWSTUFF.md  README.md
migrations/2023-04-15-050915_create_cookies/: down.sql  up.sql
src/: handlers.rs  lib.rs  main.rs  models.rs  schema.rs
static/: add.html  index.html
static/css/: style.css
